# otus__warehouse_management

./: README.md  main.py  pyproject.toml
domain/: models.py  repositories.py  services.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_service.py
tests/test_infrastructure/: test_order_repo.py  test_product_repo.py
